# mlir2crab

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
docker/: mlir2crab.Dockerfile
include/mlir2crab/: CrabDomainTypes.h  CrabIrAnalyzerOpts.h  CrabIrBuilderOpts.h  CrabIrTypes.h  mlir2crab.h
include/mlir2crab/Dialect/Crab/IR/: CrabDialect.h  CrabDialect.td  CrabOps.h  CrabOps.td
include/mlir2crab/Support/: Error.h  Log.h
lib/: CMakeLists.txt
lib/Dialect/: CMakeLists.txt
lib/Dialect/Crab/: CMakeLists.txt
lib/Dialect/Crab/IR/: CrabDialect.cpp  CrabOps.cpp
lib/Mlir2Crab/: CMakeLists.txt  CrabIrAnalyzer.cpp  CrabIrAnalyzerOpts.cpp  CrabIrBuilder.cpp  CrabIrBuilderOpts.cpp  Log.cpp
tests/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  p1.mlir
tools/: CMakeLists.txt  mlir2crab.cpp
